// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should query 1 1`] = `
<div>
  Loading Parser...
</div>
`;

exports[`createReactor should query 1 2`] = `
<div>
  <span>
    Loading...
  </span>
</div>
`;

exports[`createReactor should query 1 3`] = `
<div>
  <span>
    0.2.0
  </span>
</div>
`;

exports[`createReactor should query 2 1`] = `
[
  <h2>
    IC Canister Interaction
  </h2>,
  <p>
    Loading Candid interface...
  </p>,
]
`;

exports[`createReactor should query 2 2`] = `
[
  <h2>
    IC Canister Interaction
  </h2>,
  <div>
    <span>
      Loading...
    </span>
  </div>,
]
`;

exports[`createReactor should query 2 3`] = `
[
  <h2>
    IC Canister Interaction
  </h2>,
  <div>
    <span>
      0.2.0
    </span>
  </div>,
]
`;
